--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@payloadcms/plugin-ecommerce": "^3.68.2",
     "@payloadcms/plugin-seo": "^3.68.2",
     "@payloadcms/richtext-lexical": "3.68.2",
+    "@payloadcms/storage-s3": "^3.68.3",
     "@payloadcms/ui": "3.68.2",
     "@paystack/inline-js": "^2.22.7",
     "@paystack/paystack-sdk": "^1.0.1",
