--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-postgres": "3.68.5",
+    "@payloadcms/email-nodemailer": "3.68.5",
     "@payloadcms/live-preview-react": "^3.68.5",
     "@payloadcms/next": "3.68.5",
     "@payloadcms/plugin-ecommerce": "^3.68.5",
@@ -40,16 +42,18 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "1.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.559.0",
-    "next": "15.4.8",
+    "next": "15.4.10",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.5",
     "payload": "3.68.5",
@@ -58,11 +62,13 @@
     "query-string": "^9.3.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-email": "^5.1.0",
     "react-hook-form": "^7.68.0",
     "sharp": "0.34.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@playwright/test": "1.56.1",
