--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.559.0",
