fix: not found loaing infinitely

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts",
-    "db:seed": "cross-env NODE_OPTIONS=--no-deprecation payload run src/seed/index.ts"
+    "db:seed": "cross-env NODE_OPTIONS=--no-deprecation payload run src/endpoints/seed/index.ts"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
